--- a/.github/workflows/build-CI.yml
+++ b/.github/workflows/build-CI.yml
@@ -1,10 +1,6 @@
 name: OpenWrt-CI
 
-on:
-  schedule:
-    - cron: '0 22 * * 5'
-  repository_dispatch:
-    types: 'run'
+on: push
 
 env:
   TZ: 'Asia/Shanghai'
