--- a/.github/config
+++ b/.github/config
@@ -49,3 +49,5 @@ done
 sed -i 's/ipaddr:-"192.168.1.1"/ipaddr:-"10.0.2.222"/' package/base-files/files/bin/config_generate
 
 cp .github/.config 
+
+cat .config
