--- a/.github/config
+++ b/.github/config
@@ -31,23 +31,11 @@ git apply ../.github/patches/{0001*,0002*}.patch --directory=feeds/luci
     cp index_arm.htm index.htm
 )
 
-packages=" \
-brcmfmac-firmware-43430-sdio brcmfmac-firmware-43455-sdio kmod-brcmfmac wpad \
-kmod-fs-ext4 kmod-fs-vfat kmod-fs-exfat dosfstools e2fsprogs antfs-mount \
-kmod-usb2 kmod-usb3 kmod-usb-storage kmod-usb-storage-extras kmod-usb-storage-uas \
-kmod-usb-net kmod-usb-net-asix-ax88179 kmod-usb-net-rtl8150 kmod-usb-net-rtl8152 \
-blkid lsblk parted fdisk cfdisk losetup resize2fs tune2fs pv unzip \
-lscpu htop iperf3 curl lm-sensors install-program
-"
-sed -i '/FEATURES+=/ { s/cpiogz //; s/ext4 //; s/ramdisk //; s/squashfs //; }' \
-    target/linux/armvirt/Makefile
-for x in $packages; do
-    sed -i "/DEFAULT_PACKAGES/ s/$/ $x/" target/linux/armvirt/Makefile
-done
-
 # replace default ip
 sed -i 's/ipaddr:-"192.168.1.1"/ipaddr:-"10.0.2.222"/' package/base-files/files/bin/config_generate
 
 cp .github/.config 
+
+make defconfig
 
 cat .config
